[package]
name = "ballchasing_uploader"
version = "0.1.2"
edition = "2021"
description = "Auto-upload Rocket League replays to ballchasing.com"
license = "MIT"
repository = "https://github.com/your-username/ballchasing-uploader"

[[bin]]
name = "ballchasing-uploader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }
notify = "6.0"
notify-debouncer-mini = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# GUI
eframe = "0.27"
egui = "0.27"
rfd = "0.12"
image = { version = "0.24", default-features = false, features = ["png"] }
open = "5.0"
self_update = { version = "0.41.0", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate", "compression-zip-bzip2"] }
auto-launch = "0.6.0"
